--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 </head>
 <bodt>
 
-    
 <header>ALURAFLIX</header>
+<section>
+    <div></div>
 <h1>Catálogo de Vídeos De Química</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/S7YZnU0dwac?si=VLeKL0IkUiNY3QgE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+</div>
+</section>
 
 </body>
 </html>
