--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <img id="banner" src="Quimica.jpg" alt=""width="50px"
     <title>Aluraflix</title>
 </head>
 <bodt>
