--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
     <title>Aluraflix</title>
 </head>
 <bodt>
-
     <header>ALURAFLIX</header>
     <section>
-        <div></div>
+        <div>
         <h1>Catálogo de Vídeos De Química</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/S7YZnU0dwac?si=VLeKL0IkUiNY3QgE"
+        <p>bem-vino ao nosso catálogo de vídeos de Química do terceiro trimeste! aqui você encontrará uma seleção de 
+              conteúdo que ajuda a compreender melhor os principai tma etudados nete período, como reaçõe 
+              Químicas, soluções, ligações Químicas e propriedades da matéria. Os vídeos foram escolhidos para tornar o
+              aprendizado mais dinẫmico e interessante, facilitando a compreensã0 dos conceitos por meio de explicações 
+              visuais e experimentos práticos. explore os materias, revise os asssuntios e aprofunde seus conhecimentos de 
+              forma interativa e divertida!</p>
+    </div>
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/S7YZnU0dwac?si=VLeKL0IkUiNY3QgE"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-    </section>
 
-    </body>
+    </section>
+    </div>
+</section.</body>
 
 </html>
