--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <bodt>
     <header>ALURAFLIX</header>
-    <section>
+    <sectio class="chamada">
         <div>
         <h1>Catálogo de Vídeos De Química</h1>
         <p>bem-vino ao nosso catálogo de vídeos de Química do terceiro trimeste! aqui você encontrará uma seleção de 
