--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <bodt>
     <header>ALURAFLIX</header>
     <sectio class="chamada">
-        <div>
+        <div class="chamada-texto">
         <h1>Catálogo de Vídeos De Química</h1>
         <p>bem-vino ao nosso catálogo de vídeos de Química do terceiro trimeste! aqui você encontrará uma seleção de 
               conteúdo que ajuda a compreender melhor os principai tma etudados nete período, como reaçõe 
